# Construction-Robotic-Monitoring

./: CMakeLists.txt  README.md  VLM_SERVICE_README.md  langchain_reteriver.py  package.xml  requirements.txt  setup.cfg  setup.py
BIM_processing/: KG_reteriver.py  KG_to_VLM.py  ifc_as_Txt.py  ifc_to_KG.py  test.py
BIM_processing/converted_bim_models/: bim_crane_hall.json  bim_graph.json  bim_graph_duplex.json
BIM_processing/converted_bim_models/csv_converted_models/: edges_hall.csv  nodes_hall.csv
BIM_processing/ifc_models/: Duplex_A_20110907.usd
BIM_processing/ifc_models/crane_hall/: model.mtl
BIM_processing/utils/: cypher_queries.json  cypher_query_utils.py  prompt_manager.py
config/: vlm_prompts.json
reports/: vlm_responses.txt
ros2_nodes/: __init__.py  autonomous_monitor.py  inspect_neo4j.py  ros2_vlm.py  vlm_client.py
ros2_nodes/srv/: VLMQuery.srv
