<?xml version="1.0"?>
<package format="3">
  <name>ros2_nodes</name>
  <version>0.0.0</version>
  <description>Python utilities and scripts for BIM models</description>
  <maintainer email="you@example.com">Maintainer</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <!-- ROS2 dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  
  <!-- runtime / python deps -->
  <exec_depend>python3</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

